<resources>
    <string name="app_name">AgileFoodies</string>


    <!-- Juli -->

    <string name="sign_in">Sign in</string>
    <string name="add_image">Add Image</string>
    <string name="hint_instructions">Type instructions here</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>

    <string name="recipe_details">"Recipe Details "</string>
    <string name="nearest_shop">"Find Nearest Shop"</string>
    <string name="foodbank">"Foodbank Details"</string>
    <string name="recipe_search">Search for a Recipe</string>
    <string name="timer_title">Timer</string>
    <string name="unit_converter">Unit Converter</string>
    <string name="upload_recipe">Upload Your Recipe</string>
    <string name="review_title">Review App</string>

    <string name="Time">"Time: "</string>
    <string-array name="category_theme_array">
        <item>Select an item</item>
        <item>English</item>
        <item>Mexican</item>
        <item>Italian</item>
        <item>Chinese</item>
        <item>Thai</item>
        <item>EasternEuropean</item>
        <item>Spanish</item>
        <item>French</item>
    </string-array>
    <string-array name="category_meal_array">
        <item>Breakfast</item>
        <item>Lunch</item>
        <item>Main Meal</item>
        <item>Snack</item>
        <item>Side</item>
        <item>Kids</item>
    </string-array>


    <!-- Jack -->
    <string name="search_param">Enter item</string>
    <string name="breakfast">Breakfast</string>
    <string name="lunch">Lunch</string>
    <string name="dinner">Dinner</string>
    <string name="side">Sides</string>
    <string name="free_food">Free meals in your area</string>
    <string name="title_activity_home_page">Home Page </string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>


    <string name="action_settings">Settings</string>


    <!--    <string name=""></string>   -->

    <!-- Matthew -->

    <!-- unit converter -->
    <string-array name="unit_arrays">
        <item>Milliliters</item>
        <item>Cups</item>
        <item>Table Spoons</item>
        <item>Tea Spoons</item>
        <item>Pints</item>
    </string-array>

    <string name="Unit_Conversion">Unit Conversion</string>
    <string name="equals">=</string>
    <string name="to">To</string>
    <string name="from">From</string>
    <string name="go">Go</string>
    <string name="converter">Converter</string>
    <!-- /unit converter -->

    <string name="review_button">Review</string>
    <string name="review_text">Please Leave a review</string>

    <string name="find_shops_near_you">Find shops near you</string>
    <string name="tesco">Tesco</string>
    <string name="lidl">Lidl</string>
    <string name="sainsbury_s">Sainsbury\'s</string>
    <string name="asda">Asda</string>
    <string name="aldi">Aldi</string>
    <string name="waitrose">Waitrose</string>

    <string name="account">Account</string>
    <string name="food_bank_location_assistance">food bank location assistance:</string>
    <string name="google_maps">Google Maps</string>
    <string name="search_the_web">search the web</string>

    <string name="home">Home</string>
    <string name="tesco_lab">Tesco Lab</string>
    <string name="upload_a_recipe">Upload a Recipe</string>
    <string name="timer">Timer</string>
    <string name="settings">Settings</string>
    <string name="locate_stores_near_you">Locate stores near you</string>
    <string name="leave_a_review">Leave a review</string>
    <string name="locate_free_food">Food Banks</string>
    <string name="communicate">Communicate</string>
    <string name="share">Share</string>
    <string name="send">Send</string>
    <string name="select_a_shop_to_locate_near_you">Select a shop to locate a store near you</string>
    <string name="temp_image_msg">temp image, will be replaced with link to database</string>
    <string name="food_bank_text">A food-bank can give assistance to those who need it, so that they can get enough food to feed themselves. If you require this service, please have a look through the buttons below to find a food-bank near you that might be able to help you.</string>
    <string name="sign_out">SIGN OUT</string>
    <string name="google_profile_picture">google profile picture</string>
    <string name="logo">logo</string>
    <string name="agilefoodies">AgileFoodies</string>
    <string name="immage_of_food">image of food</string>
    <string name="recipe_timer">Recipe Timer</string>
    <string name="search">search</string>
    <string name="minutes">Minutes</string>
    <string name="reset">reset</string>
    <string name="start">start</string>
    <string name="_00_00">00:00</string>
    <string name="timer_icon">timer Icon</string>
    <string name="set">Set</string>
    <string name="set_minutes">Set Minutes</string>
    <string name="image_uploaded">image uploaded</string>
    <string name="type_recipe_name_here">type recipe name here</string>
    <string name="type_your_ingredients_here_one_per_line">type your ingredients here (one per line)</string>
    <string name="type_your_instructions_here">type your instructions here</string>
    <string name="vegan">vegan?</string>
    <string name="vegetarian">Vegetarian?</string>
    <string name="time_taken_in_total">time taken in total</string>
    <string name="_0">0</string>
    <string name="show_recipe">Show Recipe</string>
    <string name="an_image_button">an image button</string>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchForRecipe">Search for a recipe</string>
    <string name="search_recipe_names">Search recipe names:</string>
    <string name="searchbutton">searchButton</string>
    <string name="search_ingredients">Search ingredients:</string>
    <string name="ingredient_search">ingredient Search</string>
    <string name="no_ingredients">No ingredients</string>
    <string name="spinner_title">Category</string>


    <!-- Marshall -->


    <!-- Ash -->


</resources>
