<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

    <EditText
        android:id="@+id/your_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/type_recipe_name_here"
        />

        <LinearLayout
            android:id="@+id/ingredient"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginStart="@dimen/activity_vertical_margin"
            android:layout_marginEnd="@dimen/activity_vertical_margin">
        </LinearLayout>

    <EditText
        android:id="@+id/your_recipe_instructions"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:maxLines="12"
        android:hint="@string/type_your_instructions_here"
    />

    <ImageButton
        android:id="@+id/imageButtonAddImage"
        android:layout_width="@dimen/imageview_width"
        android:layout_height="@dimen/imageview_height"
        android:contentDescription="@string/add_image"
        android:src="@drawable/ic_menu_gallery"/>
                                                            
    <ImageButton
        android:id="@+id/takePhoto"
        android:layout_width="@dimen/imageview_width"
        android:layout_height="@dimen/imageview_height"
        android:contentDescription="@string/add_image"
        android:src="@drawable/ic_menu_camera" />

    <ImageView

        android:id="@+id/uploadedImage"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/image_uploaded"
         />



    <Switch
        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vegan"
         />
    <Switch
        android:id="@+id/switch2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/vegetarian"
    />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:hint="@string/time_taken_in_total"
/>

    <Spinner
        android:id="@+id/category_spinner"
        android:layout_width="336dp"
        android:layout_height="25dp"
        android:prompt="@string/spinner_title"/>
/>

        <ImageButton
            android:id="@+id/save_upload"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_menu_manage"
            android:contentDescription="@string/settings" />

        <fragment
            android:id="@+id/adFragment"
            android:name="marshmallow.cis2003.tees.ac.uk.agilefoodies.AdFragment"
            android:layout_width="match_parent"
            android:layout_height="75dp" />

    </LinearLayout>

</ScrollView>