<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SearchRecipeFragment">

    <!-- TODO: Update blank fragment layout -->

    <EditText
        android:id = "@+id/search_term_recipe_name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/buttonSearch_recipe_name"
        android:hint="@string/search_recipe_names" />

    <Button
        android:id="@+id/buttonSearch_recipe_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/searchbutton" />

    <EditText
        android:id="@+id/search_term_ingredients"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/search_term_recipe_name"
        android:layout_toEndOf="@id/buttonSearch_ingredients"
        android:hint="@string/search_ingredients"
        />

    <Button
        android:id="@+id/buttonSearch_ingredients"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/buttonSearch_recipe_name"
        android:text="@string/ingredient_search" />

    <TextView
        android:id = "@+id/view_results"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/buttonSearch_recipe_name"
       />


</RelativeLayout>