<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageButton
        android:id="@+id/imageButton"
        android:layout_width="96dp"
        android:layout_height="92dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        tools:layout_editor_absoluteX="272dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/imageButton2"
        android:layout_width="98dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        tools:layout_editor_absoluteX="270dp"
        tools:layout_editor_absoluteY="108dp" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:srcCompat="@mipmap/ic_launcher_round"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="1dp" />

    <ImageButton
        android:id="@+id/imageButton3"
        android:layout_width="98dp"
        android:layout_height="90dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="16dp" />

    <ImageButton
        android:id="@+id/imageButton4"
        android:layout_width="100dp"
        android:layout_height="88dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        tools:layout_editor_absoluteX="172dp"
        tools:layout_editor_absoluteY="108dp" />

    <ImageButton
        android:id="@+id/imageButton5"
        android:layout_width="97dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        tools:layout_editor_absoluteX="271dp"
        tools:layout_editor_absoluteY="198dp" />

    <ImageButton
        android:id="@+id/imageButton6"
        android:layout_width="98dp"
        android:layout_height="99dp"
        app:srcCompat="@drawable/common_google_signin_btn_icon_dark"
        tools:layout_editor_absoluteX="174dp"
        tools:layout_editor_absoluteY="198dp" />

    <Button
        android:id="@+id/button2"
        android:layout_width="75dp"
        android:layout_height="57dp"
        android:text="@string/breakfast"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="120dp" />

    <Button
        android:id="@+id/button3"
        android:layout_width="72dp"
        android:layout_height="58dp"
        android:text="@string/lunch"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="120dp" />

    <Button
        android:id="@+id/button4"
        android:layout_width="76dp"
        android:layout_height="57dp"
        android:text="@string/dinner"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="177dp" />

    <Button
        android:id="@+id/button5"
        android:layout_width="69dp"
        android:layout_height="57dp"
        android:text="@string/side"
        tools:layout_editor_absoluteX="98dp"
        tools:layout_editor_absoluteY="177dp" />

    <Button
        android:id="@+id/button6"
        android:layout_width="151dp"
        android:layout_height="61dp"
        android:text="@string/free_food"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="245dp" />

</android.support.constraint.ConstraintLayout>